# Koimsurai-NAS-backend

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  litestream.yml  nas.db-shm  nas.db-wal
migrations/: 20251201000000_add_image_ai_tables.sql  20251221000000_create_refresh_tokens_table.sql  20260501000000_add_2fa_to_users.sql
src/: error.rs  lib.rs  main.rs  state.rs
src/db/: mod.rs
src/handlers/: audit.rs  auth.rs  docker.rs  file.rs  job.rs  media.rs  mod.rs  permission.rs  search.rs  share.rs  system.rs  tag.rs  terminal.rs  trash.rs  upload.rs  upload_link.rs  version.rs  webdav.rs  ws.rs
src/middleware/: auth.rs
src/models/: file.rs  job.rs  mod.rs  permission.rs  share.rs  upload.rs  user.rs
src/routes/: mod.rs
src/services/: ai.rs  audit.rs  docker.rs  indexer.rs  mod.rs  search.rs
src/utils/: cleanup.rs  ffmpeg.rs  hash.rs  image.rs  jwt.rs  metadata.rs  mod.rs  queue.rs  totp.rs  versioning.rs
storage/: welcome.txt
tests/: auth_tests.rs  concurrency_tests.rs  file_tests.rs  proptest_security.proptest-regressions  proptest_security.rs
tests/common/: mod.rs
