[package]
name = "Koimsurai_NAS"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "limit", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
argon2 = "0.5"
jsonwebtoken = "9.3"
tower-sessions = "0.12"
axum-extra = { version = "0.9", features = ["cookie"] }
anyhow = "1.0"
dotenvy = "0.15"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.2", features = ["axum"] }
tower = { version = "0.4", features = ["util"] }
tower-sessions-sqlx-store = { version = "0.13", features = ["sqlite"] }
mime_guess = "2.0"
image = "0.25.9"
sysinfo = "0.33.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
dav-server = { version = "0.8.0", features = ["localfs"] }
headers = "0.4.1"
notify = "8.2.0"
walkdir = "2.5.0"
exif = { package = "kamadak-exif", version = "0.6.1" }
id3 = "1.16.3"
mp4 = "0.14.0"
tantivy = "0.25.0"
sha2 = "0.10.9"
urlencoding = "2.1.3"
bollard = "0.19.4"

# AI/ML 依賴 (CLIP 模型推理)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.3", optional = true }
tokenizers = { version = "0.21", optional = true }
time = "0.3.44"

[features]
default = []
ai = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
tempfile = "3.10"
proptest = "1.9.0"

